<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P_VCB" Id="{ded2fcc5-1dd9-4ee2-b935-1315ce93d88c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_VCB
VAR
	eSwitch : E_Mode;
	fbModeSelect : FB_ModeSelect;
	fbStatus : FB_Status;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbModeSelect();

fbStatus(
bFault := HMI.stVisuParam.bFault,
bStart:= HMI.stVisuParam.bStart,
bStop := HMI.stVisuParam.bStop,
bRunning := HMI.stVisuParam.bRunning,
eStatus => HMI.eStatus,
bAuto := HMI.stVisuParam.bAuto,
bOn := HMI.stVisuParam.bOn
);
]]></ST>
    </Implementation>
    <LineIds Name="P_VCB">
      <LineId Id="5" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="23" Count="4" />
      <LineId Id="30" Count="1" />
      <LineId Id="11" Count="0" />
      <LineId Id="28" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>